$Id: CHANGES,v 1.49 2000/03/08 10:51:29 stelian Exp $

Changes between versions 0.4b15 and 0.4b16 (released ?????????????)
===================================================================

1.	Fixed some several duplicate 'DUMP: DUMP:' in the
	output of dump.

2.	Corrected the estimation of blocks to dump. Note that
	this is still wrong for large directory inodes, due
	to the size of a BSD directory entry on the tape
	(estimation is based on the size of the ext2 directory,
	which is smaller because it doesn't contain the null
	character at the end).

3.	Made dump report the total number of MB written to
	tape at the end of run. Thanks to W. Reilly Cooley
	<wcooley@nakedape.cc> for the patch.

Changes between versions 0.4b14 and 0.4b15 (released March 2, 2000)
===================================================================

1.	Added a prompt command in interactive restore mode. Thanks
	to Andreas Dilger <adilger@home.com> for the patch.

2.	Fixed a buffer overflow problem in dump (caused by 
	not checking the size of the filesystem parameter). 
	Thanks to Kim Yong-jun <loveyou@hackerslab.org> for
	reporting this on Bugtraq (and to several dump users
	who forwarded me his mail).

3.	Added the '-F script' option to dump in order to 
	launch a script at the end of each tape (to be used
	with a tape changer, or to notify the sysadmin by
	pager etc.).

4.	Fixed a bug in restore compare code caused by the changes 
	I made in 0.4b14.

5.	Fixed the treatment of options using the old BSD syntax
	in both dump and restore.

Changes between versions 0.4b13 and 0.4b14 (released February 10, 2000)
=======================================================================

1.	Fixed a bug in dump which may have caused invalid deleted 
	directories to be dumped out if they were deleted after the
	mapping pass. This could occure on active filesystem and lead
	to heap corruption (causing dump malfunction in many possible ways).