@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.24 2000/03/08 10:51:29 stelian Exp $
+$Id: THANKS,v 1.25 2000/03/08 11:25:58 stelian Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -44,6 +44,7 @@ Greg Lutz		greglutz@ix.netcom.com
 Eric Maisonobe		virnet@nat.fr
 David Miller		davem@caip.rutgers.edu
 David Monro		davidm@cs.su.oz.au
+Dejan Muhamedagic	dejan@quant-x.com
 Lukas Nellen		L.Nellen@ThPhys.Uni-Heidelberg.DE
 Nuno Oliveira		nuno@eq.uc.pt
 Brent Olson		night@halcyon.com
