@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.49 2000/03/08 10:51:29 stelian Exp $
+$Id: CHANGES,v 1.50 2000/03/08 11:25:58 stelian Exp $
 
 Changes between versions 0.4b15 and 0.4b16 (released ?????????????)
 ===================================================================
@@ -16,6 +16,11 @@ Changes between versions 0.4b15 and 0.4b16 (released ?????????????)
 3.	Made dump report the total number of MB written to
 	tape at the end of run. Thanks to W. Reilly Cooley
 	<wcooley@nakedape.cc> for the patch.
+
+4.	Added the -X option to restore giving the possibility
+	to read the names of the files to be extracted/listed 
+	from a text file (instead of the command line). Thanks
+	to Dejan Muhamedagic <dejan@quant-x.com> for the patch.
 
 Changes between versions 0.4b14 and 0.4b15 (released March 2, 2000)
 ===================================================================
